# forgecode

./: .gitignore  AGENTS.md  Cargo.toml  WINDOWS_SUPPORT.md  forge.schema.json  package-lock.json  package.json
crates/forge_api/src/: api.rs  forge_api.rs  lib.rs
crates/forge_app/src/: agent.rs  agent_executor.rs  app.rs  apply_tunable_parameters.rs  command_generator.rs  error.rs  git_app.rs  infra.rs  operation.rs  orch.rs  services.rs  system_prompt.rs  tool_executor.rs  tool_registry.rs
crates/forge_config/: Cargo.toml
crates/forge_config/src/: config.rs  config.yaml  env_registry.rs  error.rs  lib.rs  read.rs  reader.rs
crates/forge_config/src/snapshots/: forge_config__read__tests__env_var_field_names.snap
crates/forge_domain/src/: agent.rs  agent_definition.rs  chat_response.rs  console.rs  context.rs  env.rs  lib.rs  model.rs  provider.rs  reasoning_effort.rs  repo.rs  result_stream_ext.rs  service_tier.rs  skill.rs  system_context.rs  workflow.rs
crates/forge_fs/src/: write.rs
crates/forge_infra/: Cargo.toml
crates/forge_main/: Cargo.toml
crates/forge_repo/: Cargo.toml
crates/forge_services/: Cargo.toml
crates/forge_spinner/: Cargo.toml
scripts/: prompt-cache-miss-analyzer.html
shell-plugin/: forge.plugin.zsh
shell-plugin/fish/: README.md  fish_right_prompt.fish  forge.fish
shell-plugin/lib/: bindings.zsh  config.zsh  context.zsh  dispatcher.zsh  helpers.zsh
shell-plugin/powershell/: ForgeCode.psd1  ForgeCode.psm1  README.md
templates/: forge-partial-summary-frame.md  forge-skill-recommendation-message.md
(+82 files in other folders)
