[package]
name = "forge_config"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
config = { version = "0.14", features = ["async"] }
dirs.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
